# foundry-byo-model

./: .gitignore  README.md  azure.yaml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
infra/: aca-dns.bicep  aca.bicep  apim.bicep  foundry.bicep  main.bicep  main.bicepparam  main.json  network.bicep  resources.bicep
scripts/: setup-foundry-agent.py  setup-foundry-agent.sh  setup-github-deploy.sh  test-agent.py
src/agent/: Dockerfile  app.py  pyproject.toml  requirements.txt
