[project]
name = "guess-my-number-agent"
version = "0.1.0"
description = "A Guess My Number game agent for Azure AI Foundry, powered by a custom BYO model."
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.0",
]
